Project

General

Profile

Actions

Bug #17110

closed

rgw: period commit return error when the current period has a zonegroup which doesn't have a master zone

Added by wei qiaomiao over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

my ceph version is v11.0.0-1720-gb403cad (b403cad100725b42b1d7afc366fd2b9596a51ea4), and the current period of my environment is:

[root@c49 ceph]# radosgw-admin period get

{
"id": "6de9c085-f3f1-4969-aa7f-590161106e19",
"epoch": 5,
"predecessor_uuid": "9af896e5-2547-41b3-b156-e11547f93435",
"sync_status": [
"",
],
"period_map": {
"id": "6de9c085-f3f1-4969-aa7f-590161106e19",
"zonegroups": [ {
"id": "3193fcd8-188a-4519-bfb8-dcfdf1ae5715",
"name": "zg2",
"api_name": "zg2",
"is_master": "false",
"endpoints": [],
"hostnames": [],
"hostnames_s3website": [],
"master_zone": "",
"zones": [],
"placement_targets": [],
"default_placement": "",
"realm_id": "96128944-791b-40df-ae85-06ac4294be67"
}, {
"id": "b5edb2ba-36a0-4448-bcf0-7f6cac6f1ec1",
"name": "zg1",
"api_name": "zg1",
"is_master": "true",
"endpoints": [],
"hostnames": [],
"hostnames_s3website": [],
"master_zone": "1b00af31-e452-4826-a641-0cf192e0d313",
"zones": [ {
"id": "1b00af31-e452-4826-a641-0cf192e0d313",
"name": "z1",
"endpoints": [],
"log_meta": "true",
"log_data": "false",
"bucket_index_max_shards": 0,
"read_only": "false"
}
],
"placement_targets": [ {
"name": "default-placement",
"tags": []
}
],
"default_placement": "default-placement",
"realm_id": "96128944-791b-40df-ae85-06ac4294be67"
}
],
"short_zone_ids": [ {
"key": "1b00af31-e452-4826-a641-0cf192e0d313",
"val": 1418071333
}, {
"key": "8fbd8fa1-b3db-4d96-b65c-240f8e1d669f",
"val": 2747913633
}
]
},
"master_zonegroup": "b5edb2ba-36a0-4448-bcf0-7f6cac6f1ec1",
"master_zone": "1b00af31-e452-4826-a641-0cf192e0d313",
"period_config": {
"bucket_quota": {
"enabled": false,
"check_on_raw": false,
"max_size": -1,
"max_size_kb": 0,
"max_objects": -1
},
"user_quota": {
"enabled": false,
"check_on_raw": false,
"max_size": -1,
"max_size_kb": 0,
"max_objects": -1
}
},
"realm_id": "96128944-791b-40df-ae85-06ac4294be67",
"realm_name": "rl1",
"realm_epoch": 2
}

then I add the master zone to zonegroup 'zg2', and want to update the period, it return error as bellow:

[root@c49 ceph]# radosgw-admin period update --commit
2016-08-24 09:04:16.723669 7f3fcf632980 0 zonegroup zg2 missing zone for master_zone=
couldn't init storage provider

other op which needs to call RGWStoreManager::get_storage function is return error too with the same reason as above(e.g. restart a rgw daemon)


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #17118: jewel: rgw: period commit return error when the current period has a zonegroup which doesn't have a master zoneResolvedLoïc DacharyActions
Actions #1

Updated by Casey Bodley over 7 years ago

  • Status changed from New to Pending Backport
  • Backport set to jewel
Actions #2

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #17118: jewel: rgw: period commit return error when the current period has a zonegroup which doesn't have a master zone added
Actions #3

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF