rgw: fix period update --commit return error

period commit return error when the current period has a zonegroup which doesn't have a master zone

Fixes: http://tracker.ceph.com/issues/17110
Signed-off-by: weiqiaomiao <wei.qiaomiao@zte.com.cn>
(cherry picked from commit fcedda6e5dfbaff3975b4474d8546cf77f78cc83)